--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,9 @@
   font-weight: 400;
   src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'), url(../fonts/y7lebkjgREBJK96VQi37ZobN6UDyHWBl620a-IRfuBk.woff) format('woff');
 }
+body div.ui-page{
+	background:#ffffff;
+}
 .ui-overlay-c {
 	background:#ffffff;
 }
@@ -32,6 +35,8 @@ font-weight: bold;
 	background: url("../images/headerBackground.png") repeat-x ;
 	border:0px;
 	padding: 15px 3px 0px;
+	float: left;
+	width: 100%;
 }
 .header .ui-field-contain{
 	position: relative;
@@ -54,10 +59,23 @@ font-weight: bold;
 	top: 31px;
 }
 .ui-header .ui-btn-right{
-	right: 3px;
+	right: 9px;
 }
 .logoPortion{
+	color: #565556;
+	text-shadow: none;
 	padding-top: 22px;
+	float: left;
+	padding-bottom: 9px;
+}
+.logoPortion img{
+	float: left;
+}
+.logoPortion span{
+	float: left;
+	padding-top: 11px;
+	padding-left: 10px;
+	font-size: 0.7em;
 }
 .categoryList{
 	width: 32.66%;
@@ -87,7 +105,10 @@ font-weight: bold;
 	text-shadow: none;
 }
 .ui-content {
-	padding: 0px;
+	padding: 0px 2px;
+	float: left;
+	background: #ffffff;
+	width: 100%;
 }
 .firstDiagonal{
 	background-color: #96B045;
@@ -147,4 +168,79 @@ font-weight: bold;
 	float: left;
 	padding-left: 5px;
 	padding-right: 5px;
+}
+.categoryContent .firstColoumn{
+	float: left;
+	width: 49.5%;
+	text-align: center;
+	border: 1px solid #fff;
+	border-left: 0px;
+	height: 95px;
+}
+.categoryContent .firstColoumn img{
+	padding-top: 20px;
+	padding-bottom: 5px;
+}
+.categoryContent .secondColoumn{
+	float: left;
+	width: 50%;
+	text-align: center;
+	border: 1px solid #fff;
+	border-left: 0px;
+	border-right: 0px;
+	height: 95px;
+	overflow-y: scroll;
+}
+.categoryContent .secondColoumn .ui-link{
+	float: left;
+	width: 100%;
+	padding-top: 3px;
+}
+.categoryContent .secondColoumn ul{
+	float: left;
+	width: 100%;
+	padding-left: 0px;
+	margin: 0px;
+}
+.categoryContent .secondColoumn ul li{
+	float: left;
+	width: 100%;
+	list-style: none;
+	border-bottom: 1px solid #fff;
+}
+.categoryContent .secondColoumn ul li span.subCategoryImage{
+	float: left;
+	width: 23%;
+	text-align: center;
+}
+.categoryContent .secondColoumn ul li span.subCategoryName{
+	float: left;
+	width: 77%;
+	color: #FEFEFE;
+	font-size: 0.593em;
+	font-family: 'Roboto Slab';
+	text-shadow: none;
+	text-align: left;
+	font-weight: normal;
+	padding-top: 2px;
+}
+.categoryContent .firstRow,.categoryContent .fifthRow{
+	background:#D8813A;
+}
+.categoryContent .secondRow{
+	background:#858688;
+}
+.categoryContent .thirdRow{
+	background: #96B045;
+}
+.categoryContent .fourthRow{
+	background: #598BC8;
+}
+.categoryContent .firstColoumn span {
+	color: #FEFEFE;
+	font-size: 0.593em;
+	font-family: 'Roboto Slab';
+	width: 100%;
+	float: left;
+	text-shadow: none;
 }
